experimental/parser/testdata/parser/range/escapes.proto.stderr.txt
warning: non-canonical string literal in reserved range
  --> testdata/parser/range/escapes.proto:6:14
   |
 6 |     reserved "foo" "bar";
   |              ^^^^^^^^^^^
  help: replace it with a canonical string
   |
 6 | -     reserved "foo" "bar";
 6 | +     reserved "foobar";
   |
   = note: Protobuf implicitly concatenates adjacent string literals, like C or
           Python; this can lead to surprising behavior

error: reserved message field name is not a valid identifier
  --> testdata/parser/range/escapes.proto:7:14
   |
 7 |     reserved "foo\n", "b\x61r";
   |              ^^^^^^^

warning: non-canonical string literal in reserved range
  --> testdata/parser/range/escapes.proto:7:23
   |
 7 |     reserved "foo\n", "b\x61r";
   |                       ^^^^^^^^
  help: replace it with a canonical string
   |
 7 | -     reserved "foo\n", "b\x61r";
 7 | +     reserved "foo\n", "bar";
   |

encountered 1 error and 2 warnings
